--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,11 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+a,
+a:hover,
+a:visited,
+a:focus {
     color: #fff;
     text-shadow: 0 0 10px #000;
 }
@@ -74,6 +78,30 @@ section {
     margin: 0 auto;
     width: 100%;
     max-width: 900px;
+}
+
+.social {
+    margin-top: 50px;
+}
+
+.twitter {
+    position: relative;
+    padding-top: 10px;
+    padding-left: 50px;
+}
+
+.twitter::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url('../images/twitter-icon.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
 }
 
 footer {
