--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,11 @@ html, body {
     margin: 0;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 100%;
-    background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+    background: rgb(129,98,255);
+    background: linear-gradient(0deg, rgba(129,98,255,1) 51%, rgba(228,184,255,1) 87%);
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 100%;
+    /*background-attachment: fixed;*/
+    /*height: 100%;*/
 }
 
 h1,
@@ -27,7 +28,7 @@ a:hover,
 a:visited,
 a:focus {
     color: #fff;
-    text-shadow: 0 0 10px #000;
+    text-shadow: 0 0 5px #000;
 }
 
 p {
@@ -40,6 +41,11 @@ section {
 
 .center {
     text-align: center;
+}
+
+p.notice {
+    text-align: center;
+    font-size: 12px;
 }
 
 #heading {
@@ -78,6 +84,26 @@ section {
     margin: 0 auto;
     width: 100%;
     max-width: 900px;
+}
+
+.screenshots {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.screenshots img {
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 10px;
+}
+
+@media all and (min-width: 768px) {
+    .screenshots {
+        flex-direction: row;
+        justify-content: space-around;
+    }
 }
 
 .social {
