--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
     background: linear-gradient(0deg, rgba(129,98,255,1) 51%, rgba(228,184,255,1) 87%);
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
-    /*height: 100%;*/
+    min-height: 100%;
 }
 
 h1,
