--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&Eczar:wght@600&&display=swap');
 
 * {
     box-sizing: border-box;
@@ -10,7 +10,7 @@ html, body {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 100%;
     background: rgb(129,98,255);
-    background: linear-gradient(0deg, rgba(129,98,255,1) 51%, rgba(228,184,255,1) 87%);
+    background: linear-gradient(0deg, rgba(20,16,32,1) 51%, rgba(38,36,58,1) 87%);
     background-repeat: no-repeat;
     /*background-attachment: fixed;*/
     min-height: 100%;
@@ -31,8 +31,38 @@ a:focus {
     text-shadow: 0 0 5px #000;
 }
 
+h1 {
+    font-family: 'Eczar', serif;
+    font-size: 5rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+h2 {
+    margin: 0;
+    font-family: 'Eczar', serif;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+}
+
 p {
     font-size: 18px;
+}
+
+.yt-embed {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 section {
@@ -53,6 +83,7 @@ p.notice {
     align-items: center;
     justify-content: center;
     flex-direction: column-reverse;
+    margin-bottom: 2rem;
 }
 
 #heading img {
@@ -108,6 +139,10 @@ p.notice {
 
 .social {
     margin-top: 50px;
+}
+
+.social img {
+    width: 50px;
 }
 
 .twitter {
