--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&Eczar:wght@600&&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@600&family=Roboto+Condensed&display=swap');
 
 * {
     box-sizing: border-box;
